sumo/tests/duarouter/errors/false_input_trips/options.duarouter
--net-file=input_net.net.xml --trip-files=xxx.xml -o routes.rou.xml
